sam-internal/k8s-out/ord/ord-flowsnake_prod/kibana-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-api-ingress
  namespace: flowsnake
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /app/kibana
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /bundles
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /status
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /api/status
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /plugins
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /elasticsearch
